--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
             content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no"
         />
         <title>Arcade Vehicle Game</title>
+        
+        <!-- AdSense code snippet -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1178190705283476"
+            crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
